yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pomodolist-frontend-service
spec:
  type: NodePort
  selector:
    app: pomodolist-frontend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
